--- a/index.html
+++ b/index.html
@@ -509,16 +509,15 @@
 
                 </v-toolbar>
                 <v-container>
-                    <v-layout row wrap>
-                        <v-flex xs3 offset-xs5>
-                            <v-card id="fixedPos">
+                    <v-layout>
+                        <v-flex xs3 offset-xs9>
+                            <v-card id="fixedPos" v-show="pickingColorMain">
 															<v-card-text>
                                 <canvas id="color-picker-main" width="150" height="150" style="width: 150px; height: 150px;"></canvas>
 															</v-card-text>
                             </v-card>
-													</v-flex>
-													<v-flex xs3 offset-xs1>
-														<v-card id="fixedPos">
+
+														<v-card id="fixedPos" v-show="pickingColor">
 															<v-card-text>
                                 <canvas id="color-picker-accent" width="150" height="150" style="width: 150px; height: 150px;"></canvas>
 															</v-card-text>
@@ -533,7 +532,7 @@
                             <v-flex xs12 sm10>
                                 <v-card>
                                     <v-responsive :aspect-ratio="8.5/11">
-                                        <v-card id="padding" align-center justify-center flat color="blue-grey" height="20%">
+                                        <v-card id="padding" align-center justify-center flat :color="selected_color_main" height="20%"> <!-- This is Changed-->
                                             <v-layout>
                                                 <v-flex xs3>
                                                     <div>
@@ -550,7 +549,7 @@
                                         </v-card>
                                             <v-layout>
                                                 <v-flex xs4 class="text-xs-center">
-                                                    <v-card :style="{color: computedColor}" height="500%"> <!-- This is Changed-->
+                                                    <v-card :color="selected_color_accent" height="500%"> <!-- This is Changed-->
                                                         <v-card tile height="4%">
                                                             <v-card-text>
                                                                 <h1 :class="{'headline': $vuetify.breakpoint.xsOnly, 'display-1': $vuetify.breakpoint.smOnly}">{{personalinfoEdit.first_name}} {{personalinfoEdit.last_name}}</h1>
@@ -625,7 +624,7 @@
                                 <v-layout>
                                     <v-flex xs4></v-flex>
                                     <v-flex xs8 height=15%>
-                                        <v-card class="blue lighten-2 ma-4 pa-4 text-xs-right" >
+                                        <v-card class="ma-4 pa-4 text-xs-right" :color="selected_color_main" ><!-- This is Changed-->
                                             <v-card-text class="display-3 pa-1 white--text">{{personalinfoEdit.first_name}}{{personalinfoEdit.last_name}}</v-card-text>
                                             <v-card-text class="display-1 pa-1 white--text">{{personalinfoEdit.email}}</v-card-text>
                                             <v-card-text class="headline pa-1 white--text">{{personalinfoEdit.phone}}</v-card-text>
@@ -665,7 +664,7 @@
                                         <v-container grid-list-lg fluid>
                                             <v-layout column>
                                                 <v-flex xs12>
-                                                    <v-card class="blue lighten-4 pa-2" height=600 flat>
+                                                    <v-card class="pa-2" :color="selected_color_accent" height=600 flat><!-- This is Changed-->
                                                         <v-card-text class="headline">Skills
                                                         </v-card-text>
                                                         <v-card-text class="">{{softskillsEdit.title}}</v-card-text>
