--- a/index.html
+++ b/index.html
@@ -693,8 +693,8 @@
 						<v-layout>
 							<v-flex>
 								<v-toolbar>
-									<div id="editor"></div>
-									<v-btn @click="pdfSave()"> Save as PDF </v-btn>
+									<div id="editor"></div> <!--changed -->
+									<v-btn @click="pdfSave()"> Save as PDF </v-btn> <!--changed -->
 								</v-toolbar>
 							</v-flex>
 						</v-layout>
